Fix spacing and add hover to container

--- a/src/components/MovieBoard/MovieBoard.scss
+++ b/src/components/MovieBoard/MovieBoard.scss
@@ -2,5 +2,12 @@
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(2, 1fr);
-    gap: .8rem;
+    gap: 2rem 0;
+    padding: 1rem 0;
+    transition: 500ms;
+    :hover{
+        transition: 500ms;
+        opacity: 1;
+    }
 }
+
